# chacebot_ws

./: .gitignore
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/gopigo3_node/: MotorStatus.h  MotorStatusLR.h  SPI.h  SPIRequest.h  SPIResponse.h
devel/include/local_controller_node/: RControllerCommands.h
devel/include/msg/: RCLocal.h
devel/lib/motion_allocator/: motion_allocator
devel/lib/pkgconfig/: gopigo3_node.pc  local_controller.pc  local_controller_node.pc  motion_allocator.pc  msg.pc  rc_rover_node.pc
devel/share/gopigo3_node/cmake/: gopigo3_node-msg-paths.cmake  gopigo3_nodeConfig.cmake
devel/share/local_controller/cmake/: local_controllerConfig.cmake
devel/share/local_controller_node/cmake/: local_controller_node-msg-paths.cmake  local_controller_nodeConfig.cmake
devel/share/motion_allocator/cmake/: motion_allocatorConfig.cmake
devel/share/msg/cmake/: msg-msg-extras.cmake  (+2 more)
src/gopigo3_node/: CMakeLists.txt
src/gopigo3_node/launch/: gopigo3.launch
src/gopigo3_node/src/: gopigo3_driver.py  imu.py
src/local_controller/: CMakeLists.txt  package.xml
src/local_controller/src/: LocalController.cpp  LocalController.h
src/local_controller_node/: CMakeLists.txt  CTestConfiguration.ini  Makefile
src/local_controller_node/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py
src/local_controller_node/devel/: .catkin  .rosinstall
src/local_controller_node/gtest/: CTestTestfile.cmake  Makefile
src/local_controller_node/msg/: RControllerCommands.msg
src/local_controller_node/scripts/: main.py
src/local_controller_node_python/: CMakeLists.txt  package.xml
src/local_controller_node_python/scripts/: main.py
src/motion_allocator/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/motion_allocator/atomic_configure/: .rosinstall  setup.sh
src/motion_allocator/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/motion_allocator/catkin_generated/installspace/: motion_allocator.pc  motion_allocatorConfig.cmake
src/motion_allocator/devel/: .catkin  local_setup.sh
src/motion_allocator/devel/lib/motion_allocator/: motion_allocator
src/motion_allocator/devel/lib/pkgconfig/: motion_allocator.pc
src/motion_allocator/devel/share/motion_allocator/cmake/: motion_allocatorConfig.cmake
src/motion_allocator/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/motion_allocator/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/motion_allocator/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
src/motion_allocator/src/: MessageQueue.h  MotionAllocator.cpp  MotionAllocator.h  motion_allocator.h
src/motion_translator/: CMakeLists.txt  package.xml
src/msg/: CMakeLists.txt  package.xml
src/msg/msg/: RCLocal.msg
src/msg/src/: RCLocal.msg
src/rc_rover_node/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
src/rc_rover_node/atomic_configure/: setup.sh
src/rc_rover_node/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/rc_rover_node/devel/: .catkin  .rosinstall  local_setup.sh
src/rc_rover_node/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/rc_rover_node/scripts/: main.py
src/rc_rover_node_python_twist/: CMakeLists.txt  package.xml
src/rc_rover_node_python_twist/launch/: rc_rover.launch
src/rc_rover_node_python_twist/scripts/: main.py
(+52 files in other folders)
